syntax = "proto3";

package proto;
option go_package = "github.com/zcong1993/grpc-go-beyond/pb";


message EchoRequest {
  string message = 1;
}

message TestRequest {
  string message = 1;
  string name = 2;
}

service Hello {
  rpc Echo(EchoRequest) returns (EchoRequest);
  rpc ServerStream(EchoRequest) returns (stream EchoRequest);
  rpc ClientStream(stream EchoRequest) returns (EchoRequest);
  rpc DuplexStream(stream EchoRequest) returns (stream EchoRequest);
}
